Fixed unclosed div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body ng-app="BoltNetworkApp">
     <div class="header">
       <div class="container">
-        <img src="img/devaron.png" width="180" height="34">
+        <img src="img/logo.svg" width="180" height="34">
       </div>
     </div>
 
@@ -74,6 +74,7 @@
           </div>
         </div>
       </div>
+    </div>
     
     <!-- Modules -->
     <script src="js/app.js"></script>
