--- a/index.html
+++ b/index.html
@@ -81,5 +81,8 @@
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js"></script>
+
+    <!-- Directives -->
+    <script src="js/directives/programListing.js"></script>
   </body>
 </html>
