Added another listing

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="container">
         <div class="content">
           <program-listing listing="program"></program-listing>
+          <program-listing listing="program2"></program-listing>
         </div>
       </div>
     </div>
